Update Queue.java